--- a/src/site/notes/Calendrier/Semaines/2024-30.md
+++ b/src/site/notes/Calendrier/Semaines/2024-30.md
@@ -47,7 +47,7 @@
 | File                                                                                                                                                                       | rating | review                                                                                                                                                   |
 | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | -------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | [[Sources/Ce que j'ai écouté/Tech Café - [flash ⏱️] Crowdstrike  panne mondiale - Podcast Addict\|Tech Café - [flash ⏱️] Crowdstrike  panne mondiale - Podcast Addict]] | 🟢     | Petit tour d'horizon sur la grosse panne mondiale de Microsoft, du pourquoi et on essaye de comprendrE.                                                  |
-| [[Sources/Ce que j'ai écouté/Tech Café - La galaxie Samsung - Podcast Addict\|Tech Café - La galaxie Samsung - Podcast Addict]]                                         | \-     | Pas mal de choses dans cette épisode et justement un peu d'impact politique entre apple, musk, trump comment la politique impacte la tech et vice versa. |
+| [[Sources/Ce que j'ai écouté/Tech Café - La galaxie Samsung - Podcast Addict\|Tech Café - La galaxie Samsung - Podcast Addict]]                                         | 🟢     | Pas mal de choses dans cette épisode et justement un peu d'impact politique entre apple, musk, trump comment la politique impacte la tech et vice versa. |
 
 { .block-language-dataview}
 
@@ -78,6 +78,7 @@
 
 { .block-language-dataview}
 
+%%
 # Sommaire De L'épisode
 
 ---
@@ -107,8 +108,8 @@
 ---
 🎧 Cette semaine, j'ai écouté :
 
-- ``- [Tech Café - La galaxie Samsung - Podcast Addict](https://podcastaddict.com/tech-cafe/episode/179537765) ``
 - ``- [Tech Café - [flash ⏱️] Crowdstrike  panne mondiale - Podcast Addict](https://podcastaddict.com/tech-cafe/episode/179578680) ``
+- ``- [Tech Café - La galaxie Samsung - Podcast Addict](https://podcastaddict.com/tech-cafe/episode/179537765) ``
 
 { .block-language-dataview}
 
